--- a/requirements.txt
+++ b/requirements.txt
@@ -1,74 +1,2 @@
-# Core Dependencies
-python-dotenv==1.0.0
-tenacity==8.2.3
-numpy==1.24.3
-pandas==2.0.3
-
-# Market Data Sources
-yfinance==0.2.28
-polygon-api-client==1.12.0
-alpaca-trade-api==3.1.1
-ccxt==4.1.0
-pandas-datareader==0.10.0
-
-# Databases
-redis==5.0.1
-mysql-connector-python==8.1.0
-pymysql==1.1.0
-
-# Time-Series Database
-influxdb-client==1.38.0
-
-# Messaging
-pyzmq==25.1.1
-
-# Sentiment Analysis (optional, fallback to web scraping)
-fear-and-greed==1.0.1  # May need to install from source
-beautifulsoup4==4.12.2
-lxml==4.9.3
-
-# Machine Learning & Simulation
-torch==2.1.0
-torchvision==0.16.0
-scipy==1.11.3
-scikit-learn==1.3.1
-
-# Metrics & Monitoring
-prometheus-client==0.18.0
-
-# Web & API
-requests==2.31.0
-urllib3==2.0.7
-
-# Logging & Utilities
-coloredlogs==15.0.1
-
-# Testing (Development)
-pytest==7.4.3
-pytest-cov==4.1.0
-pytest-asyncio==0.21.1
-pytest-mock==3.12.0
-
-# Code Quality (Development)
-black==23.11.0
-flake8==6.1.0
-mypy==1.7.0
-isort==5.12.0
-
-# Documentation (Development)
-sphinx==7.2.6
-sphinx-rtd-theme==2.0.0
-
-# Optional: GPU Acceleration
-# To install CUDA-enabled PyTorch, use:
-# pip install torch torchvision --index-url https://download.pytorch.org/whl/cu118
-
-# Optional: Advanced Analytics
-matplotlib==3.8.1
-seaborn==0.13.0
-plotly==5.18.0
-
-# Optional: Jupyter for analysis
-jupyter==1.0.0
-jupyterlab==4.0.9
-ipykernel==6.26.0
+# Updated requirements
+ccxt>=4.1.0,<5
